Decreased center page right and left padding to fix ball wrap on thin devices

--- a/styles/base.css
+++ b/styles/base.css
@@ -38,7 +38,7 @@ body::-webkit-scrollbar {
 
 .page {
     width: 100%;
-    padding: 4rem;
+    padding: 4rem 3rem;
     box-sizing: border-box;
 }
 
